Partial_14Dec2021/force-app/main/default/objects/Distributor_sap__c/Distributor_sap__c.object-meta.xml
<CustomObject>
    <label>Distributor</label>
    <nameField>
        <label>Distributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>