Partial_14Dec2021/force-app/main/default/objects/Distributor_sap__c/fields/Club__c.field-meta.xml
<CustomField>
    <fullName>Club__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Club</label>
    <referenceTo>Club__c</referenceTo>
    <relationshipLabel>Distributors</relationshipLabel>
    <relationshipName>Distributors</relationshipName>
    <type>Lookup</type>
</CustomField>