Partial_14Dec2021/force-app/main/default/objects/Distributor_sap__c/fields/heroku_identifier__c.field-meta.xml
<CustomField>
    <fullName>heroku_identifier__c</fullName>
    <externalId>true</externalId>
    <label>heroku identifier</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>