Partial_14Dec2021/force-app/main/default/objects/Distributor_sap__c/fields/Sap_id__c.field-meta.xml
<CustomField>
    <fullName>Sap_id__c</fullName>
    <label>Sap id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>