Partial_14Dec2021/force-app/main/default/objects/Distributor_sap__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Club__c</columns>
    <columns>Sap_id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>